[package]
name = "xactserver"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bb8 = "0.8.0"
bit-set = "0.5.3"
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "3.2.7", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.17"
lazy_static = "1.4.0"
log = "0.4.14"
prost = "0.10"
tonic = "0.7"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
neon_utils = { git = "https://github.com/neondatabase/neon.git", package = "utils" }
tokio_postgres = { git = "https://github.com/neondatabase/rust-postgres.git", branch = "neon", package = "tokio-postgres" }
url = "2.2.2"

[build-dependencies]
tonic-build = "0.7"
